--- a/Geo4.tex
+++ b/Geo4.tex
@@ -93,9 +93,8 @@ $$A \times B = \{(a,b) \mid a \in A, b \in B \}$$
 \section{Cartesian Plane}
 
 \subsection{Definition}
+In Mathematics, the cartesian plane is defined as a two-dimensional coordinate plane, which is formed by the intersection of the x-axis and y-axis. The x-axis and y-axis intersect perpendicular to each other at the point called the origin.
 
-
-\pagebreak
 
 \subsection{Visual Representation}
 
@@ -121,34 +120,36 @@ $$A \times B = \{(a,b) \mid a \in A, b \in B \}$$
 
 \subsection{Point}
 \subsubsection{Definition}
-\vspace{20px}
+A point is a primitive notion that models an exact location in space, and has no length, width, or thickness. 
 
 \subsubsection{Plot points}
 
 
 
+
+
 \tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt        
 
-\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-.7,xscale=.7]
+\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-1,xscale=1]
 %uncomment if require: \path (0,300); %set diagram left start at 0, and has height of 300
 
-%Straight Lines [id:da5485385098063555] 
-\draw    (137.67,209.03) -- (137.67,45.03) ;
-\draw [shift={(137.67,43.03)}, rotate = 90] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
-%Straight Lines [id:da9244581279454482] 
-\draw    (42.01,140.63) -- (242.01,139.93) ;
-\draw [shift={(244.01,139.92)}, rotate = 179.8] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
-%Straight Lines [id:da2006977343179377] 
-\draw    (439.67,210.03) -- (439.67,46.03) ;
-\draw [shift={(439.67,44.03)}, rotate = 90] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
-%Straight Lines [id:da9562220195154991] 
-\draw    (344.01,141.63) -- (544.01,140.93) ;
-\draw [shift={(546.01,140.92)}, rotate = 179.8] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
+%Shape: Grid [id:dp09064694594513245] 
+\draw  [draw opacity=0] (58.64,106.92) -- (229.67,106.92) -- (229.67,221.25) -- (58.64,221.25) -- cycle ; \draw   (58.64,106.92) -- (58.64,221.25)(71.28,106.92) -- (71.28,221.25)(83.92,106.92) -- (83.92,221.25)(96.55,106.92) -- (96.55,221.25)(109.19,106.92) -- (109.19,221.25)(121.83,106.92) -- (121.83,221.25)(134.46,106.92) -- (134.46,221.25)(147.1,106.92) -- (147.1,221.25)(159.74,106.92) -- (159.74,221.25)(172.38,106.92) -- (172.38,221.25)(185.01,106.92) -- (185.01,221.25)(197.65,106.92) -- (197.65,221.25)(210.29,106.92) -- (210.29,221.25)(222.92,106.92) -- (222.92,221.25) ; \draw   (58.64,106.92) -- (229.67,106.92)(58.64,119.56) -- (229.67,119.56)(58.64,132.2) -- (229.67,132.2)(58.64,144.83) -- (229.67,144.83)(58.64,157.47) -- (229.67,157.47)(58.64,170.11) -- (229.67,170.11)(58.64,182.75) -- (229.67,182.75)(58.64,195.38) -- (229.67,195.38)(58.64,208.02) -- (229.67,208.02)(58.64,220.66) -- (229.67,220.66) ; \draw    ;
+%Shape: Axis 2D [id:dp3391291012826534] 
+\draw [color={rgb, 255:red, 255; green, 0; blue, 0 }  ,draw opacity=1 ][line width=2.25]  (36.72,195.35) -- (259.72,195.35)(95.64,88.35) -- (95.64,248.16) (252.72,190.35) -- (259.72,195.35) -- (252.72,200.35) (90.64,95.35) -- (95.64,88.35) -- (100.64,95.35)  ;
+%Shape: Ellipse [id:dp767051254171291] 
+\draw  [fill={rgb, 255:red, 245; green, 166; blue, 35 }  ,fill opacity=1 ] (130.29,132.2) .. controls (130.29,130.9) and (131.32,129.84) .. (132.58,129.84) .. controls (133.85,129.84) and (134.88,130.9) .. (134.88,132.2) .. controls (134.88,133.5) and (133.85,134.55) .. (132.58,134.55) .. controls (131.32,134.55) and (130.29,133.5) .. (130.29,132.2) -- cycle ;
+%Shape: Grid [id:dp05039496198621474] 
+\draw  [draw opacity=0] (337.64,108.92) -- (508.67,108.92) -- (508.67,223.25) -- (337.64,223.25) -- cycle ; \draw   (337.64,108.92) -- (337.64,223.25)(350.28,108.92) -- (350.28,223.25)(362.92,108.92) -- (362.92,223.25)(375.55,108.92) -- (375.55,223.25)(388.19,108.92) -- (388.19,223.25)(400.83,108.92) -- (400.83,223.25)(413.46,108.92) -- (413.46,223.25)(426.1,108.92) -- (426.1,223.25)(438.74,108.92) -- (438.74,223.25)(451.38,108.92) -- (451.38,223.25)(464.01,108.92) -- (464.01,223.25)(476.65,108.92) -- (476.65,223.25)(489.29,108.92) -- (489.29,223.25)(501.92,108.92) -- (501.92,223.25) ; \draw   (337.64,108.92) -- (508.67,108.92)(337.64,121.56) -- (508.67,121.56)(337.64,134.2) -- (508.67,134.2)(337.64,146.83) -- (508.67,146.83)(337.64,159.47) -- (508.67,159.47)(337.64,172.11) -- (508.67,172.11)(337.64,184.75) -- (508.67,184.75)(337.64,197.38) -- (508.67,197.38)(337.64,210.02) -- (508.67,210.02)(337.64,222.66) -- (508.67,222.66) ; \draw    ;
+%Shape: Axis 2D [id:dp6799205357732412] 
+\draw [color={rgb, 255:red, 255; green, 0; blue, 0 }  ,draw opacity=1 ][line width=2.25]  (315.72,196.16) -- (538.72,196.16)(463.23,90.35) -- (463.23,250.16) (531.72,191.16) -- (538.72,196.16) -- (531.72,201.16) (458.23,97.35) -- (463.23,90.35) -- (468.23,97.35)  ;
+%Shape: Ellipse [id:dp5938164270153385] 
+\draw  [fill={rgb, 255:red, 245; green, 166; blue, 35 }  ,fill opacity=1 ] (385.9,174.46) .. controls (385.9,173.16) and (386.92,172.11) .. (388.19,172.11) .. controls (389.46,172.11) and (390.48,173.16) .. (390.48,174.46) .. controls (390.48,175.76) and (389.46,176.81) .. (388.19,176.81) .. controls (386.92,176.81) and (385.9,175.76) .. (385.9,174.46) -- cycle ;
 
 % Text Node
-\draw (121,223) node [anchor=north west][inner sep=0.75pt]   [align=left] {(3,5)};
+\draw (137.11,113.96) node [anchor=north west][inner sep=0.75pt]  [font=\LARGE,color={rgb, 255:red, 245; green, 166; blue, 35 }  ,opacity=1 ] [align=left] {(3,5)};
 % Text Node
-\draw (420.67,221.03) node [anchor=north west][inner sep=0.75pt]   [align=left] {(-6,2)};
+\draw (378.11,130.96) node [anchor=north west][inner sep=0.75pt]  [font=\LARGE,color={rgb, 255:red, 245; green, 166; blue, 35 }  ,opacity=1 ] [align=left] {(-6,2)};
 
 
 \end{tikzpicture}
@@ -181,48 +182,47 @@ $$A \times B = \{(a,b) \mid a \in A, b \in B \}$$
 
 \end{tikzpicture}
 
-\vspace{30px}
+$$d=\sqrt{(x_1-x_2)^2+(y_1-y_2)^2}$$
 
 \subsubsection{Example}
 
 Find the distance between (1,3) and (6,7).
 
-
-\pagebreak
+$$d=\sqrt{(1-6)^2+(3-7)^2}=\sqrt{5^2+4^2}=\sqrt{41}$$
 
 \subsection{Line}
 \subsubsection{General Formula}
-\vspace{20px}
+$$ax+by+c=0$$
 \subsubsection{Examples}
+
+
 
 \tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt        
 
 \begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-1,xscale=1]
-%uncomment if require: \path (0,300); %set diagram left start at 0, and has height of 300
+%uncomment if require: \path (0,337); %set diagram left start at 0, and has height of 337
 
-%Straight Lines [id:da5485385098063555] 
-\draw    (156.93,207.03) -- (156.93,49.03) ;
-\draw [shift={(156.93,47.03)}, rotate = 90] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
-%Straight Lines [id:da9244581279454482] 
-\draw    (57.01,141.1) -- (266.01,140.42) ;
-\draw [shift={(268.01,140.42)}, rotate = 179.81] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
-%Straight Lines [id:da40962903604479894] 
-\draw    (401.93,207.03) -- (401.93,49.03) ;
-\draw [shift={(401.93,47.03)}, rotate = 90] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
-%Straight Lines [id:da02167311792978177] 
-\draw    (302.01,141.1) -- (511.01,140.42) ;
-\draw [shift={(513.01,140.42)}, rotate = 179.81] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
-%Straight Lines [id:da7739113600191492] 
-\draw    (294.54,181.41) -- (484.49,59.65) ;
-\draw [shift={(487.01,58.03)}, rotate = 147.34] [fill={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.08]  [draw opacity=0] (10.72,-5.15) -- (0,0) -- (10.72,5.15) -- (7.12,0) -- cycle    ;
-\draw [shift={(292.01,183.03)}, rotate = 327.34] [fill={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.08]  [draw opacity=0] (10.72,-5.15) -- (0,0) -- (10.72,5.15) -- (7.12,0) -- cycle    ;
+%Shape: Grid [id:dp09064694594513245] 
+\draw  [draw opacity=0] (58.64,106.92) -- (229.67,106.92) -- (229.67,221.25) -- (58.64,221.25) -- cycle ; \draw   (58.64,106.92) -- (58.64,221.25)(71.28,106.92) -- (71.28,221.25)(83.92,106.92) -- (83.92,221.25)(96.55,106.92) -- (96.55,221.25)(109.19,106.92) -- (109.19,221.25)(121.83,106.92) -- (121.83,221.25)(134.46,106.92) -- (134.46,221.25)(147.1,106.92) -- (147.1,221.25)(159.74,106.92) -- (159.74,221.25)(172.38,106.92) -- (172.38,221.25)(185.01,106.92) -- (185.01,221.25)(197.65,106.92) -- (197.65,221.25)(210.29,106.92) -- (210.29,221.25)(222.92,106.92) -- (222.92,221.25) ; \draw   (58.64,106.92) -- (229.67,106.92)(58.64,119.56) -- (229.67,119.56)(58.64,132.2) -- (229.67,132.2)(58.64,144.83) -- (229.67,144.83)(58.64,157.47) -- (229.67,157.47)(58.64,170.11) -- (229.67,170.11)(58.64,182.75) -- (229.67,182.75)(58.64,195.38) -- (229.67,195.38)(58.64,208.02) -- (229.67,208.02)(58.64,220.66) -- (229.67,220.66) ; \draw    ;
+%Shape: Axis 2D [id:dp3391291012826534] 
+\draw [color={rgb, 255:red, 255; green, 0; blue, 0 }  ,draw opacity=1 ][line width=2.25]  (36.72,170.16) -- (259.72,170.16)(147.23,88.35) -- (147.23,248.16) (252.72,165.16) -- (259.72,170.16) -- (252.72,175.16) (142.23,95.35) -- (147.23,88.35) -- (152.23,95.35)  ;
+%Shape: Grid [id:dp05039496198621474] 
+\draw  [draw opacity=0] (337.64,108.92) -- (508.67,108.92) -- (508.67,223.25) -- (337.64,223.25) -- cycle ; \draw   (337.64,108.92) -- (337.64,223.25)(350.28,108.92) -- (350.28,223.25)(362.92,108.92) -- (362.92,223.25)(375.55,108.92) -- (375.55,223.25)(388.19,108.92) -- (388.19,223.25)(400.83,108.92) -- (400.83,223.25)(413.46,108.92) -- (413.46,223.25)(426.1,108.92) -- (426.1,223.25)(438.74,108.92) -- (438.74,223.25)(451.38,108.92) -- (451.38,223.25)(464.01,108.92) -- (464.01,223.25)(476.65,108.92) -- (476.65,223.25)(489.29,108.92) -- (489.29,223.25)(501.92,108.92) -- (501.92,223.25) ; \draw   (337.64,108.92) -- (508.67,108.92)(337.64,121.56) -- (508.67,121.56)(337.64,134.2) -- (508.67,134.2)(337.64,146.83) -- (508.67,146.83)(337.64,159.47) -- (508.67,159.47)(337.64,172.11) -- (508.67,172.11)(337.64,184.75) -- (508.67,184.75)(337.64,197.38) -- (508.67,197.38)(337.64,210.02) -- (508.67,210.02)(337.64,222.66) -- (508.67,222.66) ; \draw    ;
+%Shape: Axis 2D [id:dp6799205357732412] 
+\draw [color={rgb, 255:red, 255; green, 0; blue, 0 }  ,draw opacity=1 ][line width=2.25]  (315.72,173.16) -- (538.72,173.16)(427.23,90.35) -- (427.23,250.16) (531.72,168.16) -- (538.72,173.16) -- (531.72,178.16) (422.23,97.35) -- (427.23,90.35) -- (432.23,97.35)  ;
+%Straight Lines [id:da5489466012785622] 
+\draw    (39.61,125.99) -- (201.85,250.34) ;
+\draw [shift={(204.23,252.16)}, rotate = 217.47] [fill={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.08]  [draw opacity=0] (8.93,-4.29) -- (0,0) -- (8.93,4.29) -- cycle    ;
+\draw [shift={(37.23,124.16)}, rotate = 37.47] [fill={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.08]  [draw opacity=0] (10.72,-5.15) -- (0,0) -- (10.72,5.15) -- (7.12,0) -- cycle    ;
+%Straight Lines [id:da19183252165136278] 
+\draw    (330.9,195.8) -- (473.98,122.92) ;
+\draw [shift={(476.65,121.56)}, rotate = 153.01] [fill={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.08]  [draw opacity=0] (8.93,-4.29) -- (0,0) -- (8.93,4.29) -- cycle    ;
+\draw [shift={(328.23,197.16)}, rotate = 333.01] [fill={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.08]  [draw opacity=0] (10.72,-5.15) -- (0,0) -- (10.72,5.15) -- (7.12,0) -- cycle    ;
 
 % Text Node
-\draw (114,215) node [anchor=north west][inner sep=0.75pt]   [align=left] {3x+4y+12=0};
+\draw (108,263) node [anchor=north west][inner sep=0.75pt]   [align=left] {3x+4y+12=0};
 % Text Node
-\draw (402,114) node [anchor=north west][inner sep=0.75pt]   [align=left] {(0,2)};
-% Text Node
-\draw (354,143) node [anchor=north west][inner sep=0.75pt]   [align=left] {(-4,0)};
+\draw (394,262) node [anchor=north west][inner sep=0.75pt]   [align=left] {x-2y+4=0};
 
 
 \end{tikzpicture}
@@ -231,8 +231,8 @@ Find the distance between (1,3) and (6,7).
 \subsection{Circle}
 
 \subsubsection{General Formula}
-\vspace{20px}
-
+$$(x-a)^2+(y-b)^2=r^2$$ or
+$$x^2+y^2+ax+by+c=0$$
 \subsubsection{Examples}
 
 
