--- a/Geo3.tex
+++ b/Geo3.tex
@@ -1263,14 +1263,6 @@ In $\triangle ABC$ with orthocenter H, A' the midpoint of BC, and the circumcent
 \draw (189.6,228.6) node [anchor=north west][inner sep=0.75pt]    {$A'$};
 % Text Node
 \draw (44.4,76.8) node [anchor=north west][inner sep=0.75pt]    {$X$};
-% Text Node
-\draw (430,102) node [anchor=north west][inner sep=0.75pt]    {$ \begin{array}{l}
-\ \ \ \ \ \ AO=\frac{1}{2} BX\\
-\ \ \ \ \ \ BX=AH\\
-\therefore \ AO=\frac{1}{2} AH
-\end{array}$};
-% Text Node
-\draw (356.8,65.6) node [anchor=north west][inner sep=0.75pt]   [align=left] {"A' the midpoint of BC" = Homothety!};
 
 
 \end{tikzpicture}
@@ -1280,7 +1272,13 @@ Therefore, $XA//BH$.\\\\
 Since $CX$ is the diameter of the circle, $\angle XBC$ must be $90^\circ$.\\
 Since $AH$ passes through the orthocenter, it intersects $BC$ at a $90^\circ$ angle.\\
 Therefore, $XB//AH$.\\\\
-Therefore, $AXBH$ is a parallelogram.\\
+Therefore, $AXBH$ is a parallelogram.\\\\
+"A' the midpoint of BC" = Homothety!\\
+$A'O=\frac{1}{2} BX$\\
+$BX=AH$\\
+$\therefore \ A'O=\frac{1}{2} AH$
+
+
 \pagebreak
 \subsection{Theorem:}
 O the circumcenter,G the centroid,H the orthocenter are collinear. This line is called the Euler line of the triangle.
