--- a/Geo3.tex
+++ b/Geo3.tex
@@ -1265,7 +1265,7 @@ In $\triangle ABC$ with orthocenter H, A' the midpoint of BC, and the circumcent
 \draw (44.4,76.8) node [anchor=north west][inner sep=0.75pt]    {$X$};
 
 
-\end{tikzpicture}
+\end{tikzpicture}\\
 Since $XAC$ is a triangle with $XC$, the diameter of the circle, as it's base, $\angle XAC$ is $90^\circ$.\\
 We also know that the extended line, $BH$, goes through the orthocenter, and therefore must form a $90^\circ$ angle when intersecting $AC$.\\
 Therefore, $XA//BH$.\\\\
