--- a/Geo1.tex
+++ b/Geo1.tex
@@ -253,7 +253,7 @@ $$    \begin{aligned}
 \end{minipage}
 \subsection{Another problem}
 
-Given $\mathrm{AB} / / \mathrm{CD}, \mathrm{AE}$ bisect $\mathrm{BAC}, \mathrm{CE}$ bisect $\mathrm{ACD}$, prove $\mathrm{AE}$ perpendicular to $\mathrm{CE}$.
+
 
 \tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt        
 
@@ -293,7 +293,7 @@ Given $\mathrm{AB} / / \mathrm{CD}, \mathrm{AE}$ bisect $\mathrm{BAC}, \mathrm{C
 
 \end{tikzpicture}\\
 
-
+Given $\mathrm{AB} / / \mathrm{CD}, \mathrm{AE}$ bisect $\mathrm{BAC}, \mathrm{CE}$ bisect $\mathrm{ACD}$, prove $\mathrm{AE}$ perpendicular to $\mathrm{CE}$.
 $$
 \begin{aligned}
 & \because A E, C E \text { are bisectors } \\
@@ -315,9 +315,10 @@ The same shape and size.
 \subsubsection{5 Methods:}
 \includegraphics[scale=.5]{congruent-triangles.png}
 \subsubsection{How to write in a contest}
-In the $\triangle \mathrm{ABC}$ and $\triangle \mathrm{A}^{\prime} \mathrm{B}^{\prime} \mathrm{C}^{\prime}$
+
 $$
 \begin{aligned}
+& \text{In the} \triangle ABC \text{ and } \triangle A'B'C'\\
 & \left\{\begin{array}{l}
 \text { Condition } 1 \\
 \text { Condition } 2 \\
@@ -502,9 +503,9 @@ $$\begin{array}{ll}
 \therefore \angle D B E=180^{\circ}-60^{\circ}-60^{\circ}=60^{\circ} & \therefore \angle \mathrm{DFA}=60^{\circ} \\
 \therefore \angle A B E=\angle \mathrm{DBC}=120^{\circ} & \\
 \text { In } \triangle \mathrm{ABE} \text { and } \triangle \mathrm{DBC} & \\
-\{\mathrm{AB}=\mathrm{DB} & \\
+\mathrm{AB}=\mathrm{DB} & \\
 \angle A B E=\angle \mathrm{DBC} & \\
-\mathrm{BE}=\mathrm{BC} & \\
+\mathrm{BE}=\mathrm{BC} & \\ 
 \therefore \mathrm{ABE} \cong \triangle \mathrm{DBC}(\mathrm{SAS}) &
 \end{array}$$
 \pagebreak
